--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,37 +11,51 @@
 
   <body>
     <header>
-      <h2>Bookers</h2>
-      <div>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to " Home", root_path %>
-        </li>
-        <li>
-          <%= link_to " User" %>
-        </li>
-        <li>
-          <%= link_to " Books" %>
-        </li>
-        <li>
-          <%= link_to " Log out", destroy_user_session_path,method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to " Home", root_path %>
-        </li>
-        <li>
-          <%= link_to " About", root_path %>
-        </li>
-        <li>
-          <%= link_to " Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to " Log in", new_user_session_path %>
-        </li>
-      <% end %>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to root_path do %>
+            <span>Bookers</span>
+          <% end %>
+          <!-- navbar-toggler　は枠の部分 -->
+          <!-- collapseが付与された要素の中に隠したいメニューを入れておく　必ず任意のidを付与する -->
+          <button class= "navbar-toggler collapsed" type="button" date-toggle"collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class= "navbar-toggler-icon"></span><!-- 三本線部分 -->
+          </button>
+          <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+          <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " User", user_path, class: "fas fa-user nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " Books" %>
+              </li>
+              <li>
+                <%= link_to " Log out", destroy_user_session_path,method: :delete %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to " Home", root_path %>
+              </li>
+              <li>
+                <%= link_to " About", root_path %>
+              </li>
+              <li>
+                <%= link_to " Sign up", new_user_registration_path %>
+              </li>
+              <li>
+                <%= link_to " Log in", new_user_session_path %>
+              </li>
+            <% end %>
+          </ul>
+          </div>
+        </div>
+      </nav>
     </header>
+    <p id="notice"><%= notice %></p>
     <%= yield %>
   </body>
 </html>
