--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,45 @@
-<h1>投稿詳細</h1>
+<div class="container px-5 px-sm-0">
+  <% if @book.errors.any? %>
+    <div id= "error_explanation">
+      <h3><%= @book.errors.count %> erros prohibited this object from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render "users/info", user: @user %>
+
+      <h2 class="mt-3">New book</h2>
+      <%= render "form", book: @book %>
+
+    </div>
+    <div class="col-md-8 offset-md-1"><!-- offset-md-1で1カラム隙間を開けている -->
+      <h2>Book detail</h2>
+      <table class="table table-hover table-inverse">
+        <!-- table-hover はテーブルの列にマウスを乗せた際に背景色を変更する。 -->
+        <!-- table-inverse　は色の指定 -->
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@user.id) do %>
+              <%= attachment_image_tag(@books.user, :profile_image, :fill, 50, 50, format:"jpeg", fallback: "no-image-icon.jpg") %>
+              <%= @books.user.name %>
+              <% end %>
+            </td>
+            <td><%= link_to @books.title, book_path(@books.id) %></td>
+            <td><%= @books.body %></td>
+            <% if @books.user.id == current_user.id %>
+            <td><%= link_to "Edit", edit_book_path(@books.id), class: "btn btn-sm btn-success edit_book_#{@books.id}" %></td>
+            <td><%= link_to "Destroy", book_path(@books.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
