--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,10 @@
-about
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto"><!-- 左右のpaddingと中央寄せ -->
+      Welcome to
+      <i class="fas fa-book"></i>
+      <strong>Bookers</strong>
+      !
+    </h1>
+  </div>
+</div>
