--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Bookers3</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,49 +14,61 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <%= link_to root_path do %>
+          <a class="navbar-brand" href="/">
             <span>Bookers</span>
-          <% end %>
+          </a>
           <!-- navbar-toggler　は枠の部分 -->
           <!-- collapseが付与された要素の中に隠したいメニューを入れておく　必ず任意のidを付与する -->
-          <button class= "navbar-toggler collapsed" type="button" date-toggle"collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class= "navbar-toggler" type="button" date-toggle"collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class= "navbar-toggler-icon"></span><!-- 三本線部分 -->
+            <!-- togglerはクリックするとオン・オフを切り替えられるもの -->
           </button>
-          <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
-          <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-              <li>
-                <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
-              </li>
-              <li>
-                <%= link_to " User", user_path, class: "fas fa-user nav-link text-light" %>
-              </li>
-              <li>
-                <%= link_to " Books" %>
-              </li>
-              <li>
-                <%= link_to " Log out", destroy_user_session_path,method: :delete %>
-              </li>
-            <% else %>
-              <li>
-                <%= link_to " Home", root_path %>
-              </li>
-              <li>
-                <%= link_to " About", root_path %>
-              </li>
-              <li>
-                <%= link_to " Sign up", new_user_registration_path %>
-              </li>
-              <li>
-                <%= link_to " Log in", new_user_session_path %>
-              </li>
-            <% end %>
-          </ul>
+          <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to " Home", user_path(current_user), class: "fas fa-home nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Users", users_path, class: "fas fa-users nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Books", books_path, class: "fas fa-book-open nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Log out", destroy_user_session_path,method: :delete, class:"fas fa-sign-out-alt nav-link text-light"  %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " About", homes_about_path, class: "fas fa-link nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Log in", new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+                </li>
+              <% end %>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
     <p id="notice"><%= notice %></p>
+    <main>
     <%= yield %>
+    </main>
+    <footer>
+      <div class="container mt-5"><!-- mtはmergin-topを省略した形 -->
+        <div class="row">
+          <div class="mx-auto"><!-- 中央寄せ -->
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
