--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,45 @@
-<h1>ユーザー一覧画面</h1>
+<div class="container px-5 px-sm-0">
+  <% if @book.errors.any? %>
+    <div id= "error_explanation">
+      <h3><%= @book.errors.count %> erros prohibited this object from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render "info", user: current_user %>
+
+      <h2 class="mt-3">New book</h2>
+      <%= render "books/form", book: @book %>
+
+    </div>
+    <div class="col-md-8 offset-md-1"><!-- offset-md-1で1カラム隙間を開けている -->
+      <h2>Users</h2>
+      <table class="table table-hover table-inverse">
+        <!-- table-hover はテーブルの列にマウスを乗せた際に背景色を変更する。 -->
+        <!-- table-inverse　は色の指定 -->
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th><!-- 指定された数だけ右方向にセルを結合し，１つのセルとして表示する -->
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, format:"jpeg", fallback: "no-image-icon.jpg") %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
